Upgrade Java target from 8 to 21 LTS
Build configuration:
- Update maven.compiler.source/target from 8 to 21 in parent pom.xml
- Update jdkLevel property from 1.8 to 21
- Update javadoc source level from 8 to 21 in quickfixj-base and quickfixj-core
- Remove forceLegacyJavacApi workaround (JDK-8216202 was a Java 8 issue)
- Update CI matrix to Java 21 only

Deprecated API fixes:
- Replace Class.newInstance() with getDeclaredConstructor().newInstance()
  in Message.java, DefaultMessageFactory.java, DataDictionary.java,
  and SerializationTest.java (deprecated since Java 9)
- Replace new URL(String) with URI.create(String).toURL()
  in FileUtil.java and DataDictionaryTest.java (deprecated since Java 20)
- Update exception types to use ReflectiveOperationException where applicable

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>